# NXH5Support

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: NXH5SupportConfig.cmake.in  NXH5Support_export_extra.hpp  Utility.cmake
src/NX/H5Support/: H5.cpp  H5.hpp  H5Support.cpp  H5Support.hpp
src/NX/H5Support/IO/: AttributeIO.cpp  AttributeIO.hpp  DatasetIO.cpp  DatasetIO.hpp  FileIO.cpp  FileIO.hpp  GroupIO.cpp  GroupIO.hpp  ObjectIO.cpp  ObjectIO.hpp
src/NX/H5Support/Readers/: AttributeReader.cpp  AttributeReader.hpp  DatasetReader.cpp  DatasetReader.hpp  FileReader.cpp  FileReader.hpp  GroupReader.cpp  GroupReader.hpp  ObjectReader.cpp  ObjectReader.hpp
src/NX/H5Support/Writers/: AttributeWriter.cpp  AttributeWriter.hpp  DatasetWriter.cpp  DatasetWriter.hpp  FileWriter.cpp  FileWriter.hpp  GroupWriter.cpp  GroupWriter.hpp  ObjectWriter.cpp  ObjectWriter.hpp
src/NXH5Support/: H5.hpp  H5Support.hpp
src/NXH5Support/IO/: AttributeIO.cpp  AttributeIO.hpp  DatasetIO.cpp  DatasetIO.hpp  FileIO.cpp  FileIO.hpp  GroupIO.cpp  GroupIO.hpp  ObjectIO.cpp  ObjectIO.hpp
src/NXH5Support/Readers/: AttributeReader.cpp  AttributeReader.hpp  DatasetReader.cpp  DatasetReader.hpp  FileReader.cpp  FileReader.hpp  GroupReader.cpp  GroupReader.hpp  ObjectReader.cpp  ObjectReader.hpp
src/NXH5Support/Writers/: AttributeWriter.cpp  AttributeWriter.hpp  DatasetWriter.cpp  DatasetWriter.hpp  FileWriter.cpp  FileWriter.hpp  GroupWriter.cpp  GroupWriter.hpp  ObjectWriter.cpp  ObjectWriter.hpp
test/: CMakeLists.txt  h5support_test_main.cpp  test_IO.cpp  test_IO_chunks.cpp  test_readwrite.cpp
test/cmake/: TestGenConstants.hpp.in
